Ajout pages HTML
Palette  du goût V1

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                         </div>
                         <div class="card_fav">
                             <i class="far fa-heart icone_fav"></i>
-                            <i class="fas fa-heart icone_fav_solid"></i>
+                            <i class="fas fa-heart icone_fav_checked"></i>
                         </div>
                     </div>
                 </a>
@@ -80,7 +80,7 @@
                         </div>
                         <div class="card_fav">
                             <i class="far fa-heart icone_fav"></i>
-                            <i class="fas fa-heart icone_fav_solid"></i>
+                            <i class="fas fa-heart icone_fav_checked"></i>
                         </div>
                     </div>
                 </a>
@@ -96,7 +96,7 @@
                         </div>
                         <div class="card_fav">
                             <i class="far fa-heart icone_fav"></i>
-                            <i class="fas fa-heart icone_fav_solid"></i>
+                            <i class="fas fa-heart icone_fav_checked"></i>
                         </div>
                     </div>
                 </a>
@@ -112,7 +112,7 @@
                         </div>
                         <div class="card_fav">
                             <i class="far fa-heart icone_fav"></i>
-                            <i class="fas fa-heart icone_fav_solid"></i>
+                            <i class="fas fa-heart icone_fav_checked"></i>
                         </div>
                     </div>
                 </a>
