Début CSS + Ajout fonts
Premiers essais en CSS (sans animations et dégradés) pour la page d'accueil et ajout des polices

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="">
+    <link rel="stylesheet" href="css/index.css">
     <script src="https://kit.fontawesome.com/27d5d9e20d.js" crossorigin="anonymous"></script>
     <title>OhMyFood - Réservation de Restaurants d'Exception</title>
 </head>
@@ -26,9 +26,9 @@
         <div class="text_introduction">
             <h1>Réservez le menu qui vous convient</h1>
             <p>Découvrez des restaurants d'exception, sélectionnés par nos soins.</p>
-        </div>
 
-        <button class="explore" type="submit">Explorer nos restaurants</button>
+            <button class="explore" type="submit">Explorer nos restaurants</button>
+        </div>
     </section>
 
     <section class="operation">
@@ -123,10 +123,10 @@
         <div class="footer_logo">
             <img src="images/logo/ohmyfood@2x.svg" alt="OhMyFood Logo">
         </div>
-        <a href="index.html"><i class="fas fa-utensils"></i>Proposer un restaurant</a>
-        <a href="index.html"><i class="fas fa-hands-helping"></i>Devenir partenaire</a>
-        <a href="index.html">Mentions légales</a>
-        <a href="mailto:contact@ohmyfood.com">Contact</a>
+            <a href="index.html"><i class="fas fa-utensils"></i>Proposer un restaurant</a>
+            <a href="index.html"><i class="fas fa-hands-helping"></i>Devenir partenaire</a>
+            <a href="index.html">Mentions légales</a>
+            <a href="mailto:contact@ohmyfood.com">Contact</a>
     </footer>
 </body>
 </html>
