--- a/index.html
+++ b/index.html
@@ -33,20 +33,23 @@
 
     <section class="operation">
         <h2>Fonctionnement</h2>
-            <ol class="operation_number">
-                <li class="operation_list">
+            <div class="operation_number">
+                <div class="operation_list">
+                    <p><span>1</span>
                     <i class="fas fa-mobile-alt icone_operation"></i>
-                    <span><a href="index.html">Choisissez un restaurant</a></span>
-                </li>
-                <li class="operation_list">
+                    <a href="index.html">Choisissez un restaurant</a></p>
+                </div>
+                <div class="operation_list">
+                    <p><span>2</span>
                     <i class="fas fa-list icone_operation"></i>
-                    <span><a href="index.html">Composez votre menu</a></span>
-                </li>
-                <li class="operation_list">
+                    <a href="index.html">Composez votre menu</a></p>
+                </div>
+                <div class="operation_list">
+                    <p><span>3</span>
                     <i class="fas fa-store icone_operation"></i>
-                    <span><a href="index.html">Dégustez au restaurant</a></span>
-                </li>
-            </ol>
+                    <a href="index.html">Dégustez au restaurant</a></p>
+                </div>
+            </div>
     </section>
 
     <section class="restaurants">
@@ -121,7 +124,7 @@
 
     <footer class="footer">
         <div class="footer_logo">
-            <img src="images/logo/ohmyfood@2x.svg" alt="OhMyFood Logo">
+            <h1>ohmyfood</h1>
         </div>
             <a href="index.html"><i class="fas fa-utensils"></i>Proposer un restaurant</a>
             <a href="index.html"><i class="fas fa-hands-helping"></i>Devenir partenaire</a>
