--- a/note_enchantee.html
+++ b/note_enchantee.html
@@ -150,7 +150,7 @@
 
     <footer class="footer">
         <div class="footer_logo">
-            <img src="images/logo/ohmyfood@2x.svg" alt="OhMyFood Logo">
+            <h1>ohmyfood</h1>
         </div>
         <a href="index.html"><i class="fas fa-utensils"></i>Proposer un restaurant</a>
         <a href="index.html"><i class="fas fa-hands-helping"></i>Devenir partenaire</a>
