--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             </div>
     </section>
 
-    <section class="restaurants">
+    <section id="restaurants">
             <h2>Restaurants</h2>
 
             <article class="restaurant_card">
@@ -62,11 +62,7 @@
                         <span class="card_info">Nouveau</span>
                         <div class="card_footer">
                             <h3>La palette du goût</h3>
-                            <p>Ménilmontant</p>
-                        </div>
-                        <div class="card_fav">
-                            <i class="far fa-heart icone_fav"></i>
-                            <i class="fas fa-heart icone_fav_checked"></i>
+                            <p>Ménilmontant <i class="far fa-heart icone_fav"></i></p>
                         </div>
                     </div>
                 </a>
@@ -79,11 +75,7 @@
                         <span class="card_info">Nouveau</span>
                         <div class="card_footer">
                             <h3>La note enchantée</h3>
-                            <p>Charonne</p>
-                        </div>
-                        <div class="card_fav">
-                            <i class="far fa-heart icone_fav"></i>
-                            <i class="fas fa-heart icone_fav_checked"></i>
+                            <p>Charonne <i class="far fa-heart icone_fav"></i></p>
                         </div>
                     </div>
                 </a>
@@ -95,11 +87,7 @@
                         <img src="images/restaurants/francaise.jpg" alt="A la française" />
                         <div class="card_footer">
                             <h3>À la française</h3>
-                            <p>Cité Rouge</p>
-                        </div>
-                        <div class="card_fav">
-                            <i class="far fa-heart icone_fav"></i>
-                            <i class="fas fa-heart icone_fav_checked"></i>
+                            <p>Cité Rouge <i class="far fa-heart icone_fav"></i></p>
                         </div>
                     </div>
                 </a>
@@ -111,11 +99,7 @@
                         <img src="images/restaurants/delice_sens.jpg" alt="Le Délice des Sens" />
                         <div class="card_footer">
                             <h3>Le délice des sens</h3>
-                            <p>Folie-Méricourt</p>
-                        </div>
-                        <div class="card_fav">
-                            <i class="far fa-heart icone_fav"></i>
-                            <i class="fas fa-heart icone_fav_checked"></i>
+                            <p>Folie-Méricourt<i class="far fa-heart icone_fav"></i></p>
                         </div>
                     </div>
                 </a>
