Header / Illu / Footer - Menu
Premiers essais sans animation pour le header, l'illustration et le footer des pages de menu

--- a/palette_gout.html
+++ b/palette_gout.html
@@ -20,14 +20,7 @@
     <main>
         <section class="illustration">
             <img src="images/restaurants/palette_gout.jpg" alt="La Palette du Goût" />
-            <h2>La palette du goût</h2>
-            <div class="menu_fav">
-                <input type="checkbox" class="empty_fav checked_fav">
-                <label for="check">
-                    <i class="far fa-heart icone_fav"></i>
-                    <i class="fas fa-heart icone_fav_checked"></i>
-                </label>
-            </div>
+            <h2>La palette du goût <i class="far fa-heart icone_fav"></i></h2>
         </section>
 
         <section class="menu">
