--- a/palette_gout.html
+++ b/palette_gout.html
@@ -25,103 +25,69 @@
 
         <section class="menu">
             <h2>ENTRÉES</h2>
+            <div id="border"></div>
 
             <div class="menu_container">
-                <input type="checkbox" name="ordered" id="checked1">
                 <div class="menu_container_meal">
-                    <label for="checked1" class="menu_container_meal_title">Fricassée d'escargot</label>
-                    <label for="checked1" class="menu_container_meal_info">Au piment d'Espelette</label>
+                    <h3>Fricassée d'escargot</h3>
+                    <p>Au piment d'Espelette <span>25€</span></p>
+                    <i class="fas fa-check-circle"></i>
                 </div>
-                <label for="checked1" class="menu_container_price">25€</label>
-                <label for="checked1" class="menu_container_ordered"><i class="fas fa-check-circle"></i></label>
-            </div>
 
-            <div class="menu_container">
-                <input type="checkbox" name="ordered" id="checked2">
                 <div class="menu_container_meal">
-                    <label for="checked2" class="menu_container_meal_title">Foie gras de canard mi-cuit</label>
-                    <label for="checked2" class="menu_container_meal_info">Et ses copeaux de truffe noire</label>
+                    <h3>Foie gras de canard mi-cuit</h3>
+                    <p>Et ses copeaux de truffe noire <span>35€</span></p>
+                    <i class="fas fa-check-circle"></i>
                 </div>
-                <label for="checked2" class="menu_container_price">35€</label>
-                <label for="checked2" class="menu_container_ordered"><i class="fas fa-check-circle"></i></label>
-            </div>
 
-            <div class="menu_container">
-                <input type="checkbox" name="ordered" id="checked3">
                 <div class="menu_container_meal">
-                    <label for="checked3" class="menu_container_meal_title">Oeuf au plat</label>
-                    <label for="checked3" class="menu_container_meal_info">Assaisonné à la truffe sur son lit de caviar</label>
+                    <h3>Oeuf au plat</h3>
+                    <p>Assaisonné à la truffe sur son lit de caviar <span>20€</span></p>
+                    <i class="fas fa-check-circle"></i>
                 </div>
-                <label for="checked3" class="menu_container_price">20€</label>
-                <label for="checked3" class="menu_container_ordered"><i class="fas fa-check-circle"></i></label>
             </div>
         </section>
 
         <section class="menu">
             <h2>PLATS</h2>
+            <div id="border"></div>
 
             <div class="menu_container">
-                <input type="checkbox" name="ordered" id="checked4">
                 <div class="menu_container_meal">
-                    <label for="checked4" class="menu_container_meal_title">Filet de boeuf aux herbes</label>
-                    <label for="checked4" class="menu_container_meal_info">Accompagné de sa ribambelle de légumes</label>
+                    <h3>Filet de boeuf aux herbes</h3>
+                    <p>Accompagné de sa ribambelle de légumes <span>40€</span><i class="fas fa-check-circle"></i></p>
                 </div>
-                <label for="checked4" class="menu_container_price">40€</label>
-                <label for="checked4" class="menu_container_ordered"><i class="fas fa-check-circle"></i></label>
-            </div>
 
-            <div class="menu_container">
-                <input type="checkbox" name="ordered" id="checked5">
                 <div class="menu_container_meal">
-                    <label for="checked5" class="menu_container_meal_title">Parmentier de queue de boeuf</label>
-                    <label for="checked5" class="menu_container_meal_info">A la truffe noire sur sa purée de panais</label>
+                    <h3>Parmentier de queue de boeuf</h3>
+                    <p>À la truffe noire sur sa purée de panais <span>35€</span><i class="fas fa-check-circle"></i></p>
                 </div>
-                <label for="checked5" class="menu_container_price">35€</label>
-                <label for="checked5" class="menu_container_ordered"><i class="fas fa-check-circle"></i></label>
-            </div>
 
-            <div class="menu_container">
-                <input type="checkbox" name="ordered" id="checked6">
                 <div class="menu_container_meal">
-                    <label for="checked6" class="menu_container_meal_title">Filet de Turbot</label>
-                    <label for="checked6" class="menu_container_meal_info">Aux agrumes</label>
+                    <h3>Filet de Turbot</h3>
+                    <p>Aux agrumes <span>44€</span><i class="fas fa-check-circle"></i></p>
                 </div>
-                <label for="checked6" class="menu_container_price">44€</label>
-                <label for="checked6" class="menu_container_ordered"><i class="fas fa-check-circle"></i></label>
             </div>
         </section>
 
         <section class="menu">
             <h2>DESSERTS</h2>
-
+            <div id="border"></div>
             <div class="menu_container">
-                <input type="checkbox" name="ordered" id="checked7">
                 <div class="menu_container_meal">
-                    <label for="checked7" class="menu_container_meal_title">Paris-Brest</label>
-                    <label for="checked7" class="menu_container_meal_info">Revisité</label>
+                    <h3>Paris-Brest</h3>
+                    <p>Revisité <span>18€</span><i class="fas fa-check-circle"></i></p>
                 </div>
-                <label for="checked7" class="menu_container_price">18€</label>
-                <label for="checked7" class="menu_container_ordered"><i class="fas fa-check-circle"></i></label>
-            </div>
 
-            <div class="menu_container">
-                <input type="checkbox" name="ordered" id="checked8">
                 <div class="menu_container_meal">
-                    <label for="checked8" class="menu_container_meal_title">Macaron au chocolat d'exception</label>
-                    <label for="checked8" class="menu_container_meal_info">Et glace à la vanille de Madagascar</label>
+                    <h3>Macaron au chocolat d'exception</h3>
+                    <p>Et glace à la vanille de Madagascar <span>22€</span><i class="fas fa-check-circle"></i></p>
                 </div>
-                <label for="checked8" class="menu_container_price">22€</label>
-                <label for="checked8" class="menu_container_ordered"><i class="fas fa-check-circle"></i></label>
-            </div>
 
-            <div class="menu_container">
-                <input type="checkbox" name="ordered" id="checked9">
                 <div class="menu_container_meal">
-                    <label for="checked9" class="menu_container_meal_title">Mousse au chocolat</label>
-                    <label for="checked9" class="menu_container_meal_info">Au piment d'espelette et à la truffe noire</label>
+                    <h3>Mousse au chocolat</h3>
+                    <p>Au piment d'espelette et à la truffe noire <span>23€</span><i class="fas fa-check-circle"></i></p>
                 </div>
-                <label for="checked9" class="menu_container_price">23€</label>
-                <label for="checked9" class="menu_container_ordered"><i class="fas fa-check-circle"></i></label>
             </div>
         </section>
 
