Modifications HTML menus
Modifications HTML menus /// Mise en page CSS classique terminée /// Premiers tests loader pour page d'accueil en commentaires.

--- a/francaise.html
+++ b/francaise.html
@@ -20,115 +20,74 @@
     <main>
         <section class="illustration">
             <img src="images/restaurants/francaise.jpg" alt="À la française" />
-            <h2>À la française</h2>
-            <div class="menu_fav">
-                <input type="checkbox" class="empty_fav checked_fav">
-                <label for="check">
-                    <i class="far fa-heart icone_fav"></i>
-                    <i class="fas fa-heart icone_fav_checked"></i>
-                </label>
-            </div>
+            <h2>À la française <i class="far fa-heart icone_fav"></i><i class="fa-solid fa-heart icone_fav-solid"></i></h2>
         </section>
 
         <section class="menu">
             <h2>ENTRÉES</h2>
+            <div id="border"></div>
 
             <div class="menu_container">
-                <input type="checkbox" name="ordered" id="checked1">
                 <div class="menu_container_meal">
-                    <label for="checked1" class="menu_container_meal_title">Tartare de poulpe acidulé</label>
-                    <label for="checked1" class="menu_container_meal_info">Aux zestes d'orange</label>
+                    <h3>Tartare de poulpe acidulé</h3>
+                    <p>Aux zestes d'orange <span>25€</span></p>
+                    <i class="fas fa-check-circle"></i>
                 </div>
-                <label for="checked1" class="menu_container_price">25€</label>
-                <label for="checked1" class="menu_container_ordered"><i class="fas fa-check-circle"></i></label>
-            </div>
 
-            <div class="menu_container">
-                <input type="checkbox" name="ordered" id="checked2">
                 <div class="menu_container_meal">
-                    <label for="checked2" class="menu_container_meal_title">Velouté de légumes d'antan</label>
-                    <label for="checked2" class="menu_container_meal_info">Carotte, panais, topinambour</label>
+                    <h3>Velouté de légumes d'antan</h3>
+                    <p>Carotte, panais, topinambour <span>35€</span></p>
+                    <i class="fas fa-check-circle"></i>
                 </div>
-                <label for="checked2" class="menu_container_price">35€</label>
-                <label for="checked2" class="menu_container_ordered"><i class="fas fa-check-circle"></i></label>
-            </div>
 
-            <div class="menu_container">
-                <input type="checkbox" name="ordered" id="checked3">
                 <div class="menu_container_meal">
-                    <label for="checked3" class="menu_container_meal_title">Soupe à l'oignon</label>
-                    <label for="checked3" class="menu_container_meal_info">Revisitée</label>
+                    <h3>Soupe à l'oignon</h3>
+                    <p>Revisitée <span>20€</span></p>
+                    <i class="fas fa-check-circle"></i>
                 </div>
-                <label for="checked3" class="menu_container_price">20€</label>
-                <label for="checked3" class="menu_container_ordered"><i class="fas fa-check-circle"></i></label>
             </div>
         </section>
 
         <section class="menu">
             <h2>PLATS</h2>
+            <div id="border"></div>
 
             <div class="menu_container">
-                <input type="checkbox" name="ordered" id="checked4">
                 <div class="menu_container_meal">
-                    <label for="checked4" class="menu_container_meal_title">Coquilles Saint-Jacques</label>
-                    <label for="checked4" class="menu_container_meal_info">Accompagnées d'une purée de panais</label>
+                    <h3>Coquilles Saint-Jacques</h3>
+                    <p>Accompagnées d'une purée de panais <span>40€</span><i class="fas fa-check-circle"></i></p>
                 </div>
-                <label for="checked4" class="menu_container_price">40€</label>
-                <label for="checked4" class="menu_container_ordered"><i class="fas fa-check-circle"></i></label>
-            </div>
 
-            <div class="menu_container">
-                <input type="checkbox" name="ordered" id="checked5">
                 <div class="menu_container_meal">
-                    <label for="checked5" class="menu_container_meal_title">Magret de canard</label>
-                    <label for="checked5" class="menu_container_meal_info">Et parmentier de pommes de terre</label>
+                    <h3>Magret de canard</h3>
+                    <p>Et parmentier de pommes de terre <span>35€</span><i class="fas fa-check-circle"></i></p>
                 </div>
-                <label for="checked5" class="menu_container_price">35€</label>
-                <label for="checked5" class="menu_container_ordered"><i class="fas fa-check-circle"></i></label>
-            </div>
 
-            <div class="menu_container">
-                <input type="checkbox" name="ordered" id="checked6">
                 <div class="menu_container_meal">
-                    <label for="checked6" class="menu_container_meal_title">Pigeonneau d'Ille-et-Vilaine</label>
-                    <label for="checked6" class="menu_container_meal_info">Sur son lit de gnocchis aux légumes</label>
+                    <h3>Pigeonneau d'Ille-et-Vilaine</h3>
+                    <p>Sur son lit de gnocchis aux légumes <span>44€</span><i class="fas fa-check-circle"></i></p>
                 </div>
-                <label for="checked6" class="menu_container_price">44€</label>
-                <label for="checked6" class="menu_container_ordered"><i class="fas fa-check-circle"></i></label>
             </div>
         </section>
 
         <section class="menu">
             <h2>DESSERTS</h2>
-
+            <div id="border"></div>
             <div class="menu_container">
-                <input type="checkbox" name="ordered" id="checked7">
                 <div class="menu_container_meal">
-                    <label for="checked7" class="menu_container_meal_title">Pétales de violettes glacés</label>
-                    <label for="checked7" class="menu_container_meal_info">Et purée de noisettes</label>
+                    <h3>Pétales de violettes glacés</h3>
+                    <p>Et purée de noisettes <span>18€</span><i class="fas fa-check-circle"></i></p>
                 </div>
-                <label for="checked7" class="menu_container_price">18€</label>
-                <label for="checked7" class="menu_container_ordered"><i class="fas fa-check-circle"></i></label>
-            </div>
 
-            <div class="menu_container">
-                <input type="checkbox" name="ordered" id="checked8">
                 <div class="menu_container_meal">
-                    <label for="checked8" class="menu_container_meal_title">Fondant au chocolat</label>
-                    <label for="checked8" class="menu_container_meal_info">Revisité</label>
+                    <h3>Fondant au chocolat</h3>
+                    <p>Revisité <span>22€</span><i class="fas fa-check-circle"></i></p>
                 </div>
-                <label for="checked8" class="menu_container_price">22€</label>
-                <label for="checked8" class="menu_container_ordered"><i class="fas fa-check-circle"></i></label>
-            </div>
 
-            <div class="menu_container">
-                <input type="checkbox" name="ordered" id="checked9">
                 <div class="menu_container_meal">
-                    <label for="checked9" class="menu_container_meal_title">Millefeuille croustillant</label>
-                    <label for="checked9" class="menu_container_meal_info">Myrtilles et pâte d'amande</label>
+                    <h3>Millefeuille croustillant</h3>
+                    <p>Myrtilles et pâte d'amande <span>23€</span><i class="fas fa-check-circle"></i></p>
                 </div>
-                <label for="checked9" class="menu_container_price">23€</label>
-                <label for="checked9" class="menu_container_ordered"><i class="fas fa-check-circle"></i></label>
             </div>
         </section>
 
