--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
     <title>OhMyFood - Réservation de Restaurants d'Exception</title>
 </head>
 <body>
-    <div class="loader"></div>
+    <!-- <section class="loader"> 
+    <span class="loader_anim"></span>
+    <i class="fas fa-utensils"></i>
+    </section> -->
 
     <header id="header">
         <div class="header_logo">
@@ -62,7 +65,7 @@
                         <span class="card_info">Nouveau</span>
                         <div class="card_footer">
                             <h3>La palette du goût</h3>
-                            <p>Ménilmontant <i class="far fa-heart icone_fav"></i></p>
+                            <p>Ménilmontant <i class="far fa-heart icone_fav"></i><i class="fa-solid fa-heart icone_fav-solid"></i></p>
                         </div>
                     </div>
                 </a>
@@ -75,7 +78,7 @@
                         <span class="card_info">Nouveau</span>
                         <div class="card_footer">
                             <h3>La note enchantée</h3>
-                            <p>Charonne <i class="far fa-heart icone_fav"></i></p>
+                            <p>Charonne <i class="far fa-heart icone_fav"></i><i class="fa-solid fa-heart icone_fav-solid"></i></p>
                         </div>
                     </div>
                 </a>
@@ -87,7 +90,7 @@
                         <img src="images/restaurants/francaise.jpg" alt="A la française" />
                         <div class="card_footer">
                             <h3>À la française</h3>
-                            <p>Cité Rouge <i class="far fa-heart icone_fav"></i></p>
+                            <p>Cité Rouge <i class="far fa-heart icone_fav"></i><i class="fa-solid fa-heart icone_fav-solid"></i></p>
                         </div>
                     </div>
                 </a>
@@ -99,7 +102,7 @@
                         <img src="images/restaurants/delice_sens.jpg" alt="Le Délice des Sens" />
                         <div class="card_footer">
                             <h3>Le délice des sens</h3>
-                            <p>Folie-Méricourt<i class="far fa-heart icone_fav"></i></p>
+                            <p>Folie-Méricourt<i class="far fa-heart icone_fav"></i><i class="fa-solid fa-heart icone_fav-solid"></i></p>
                         </div>
                     </div>
                 </a>
