--- a/delice_sens.html
+++ b/delice_sens.html
@@ -20,115 +20,74 @@
     <main>
         <section class="illustration">
             <img src="images/restaurants/delice_sens.jpg" alt="Le Délice des Sens" />
-            <h2>Le délice des sens</h2>
-            <div class="menu_fav">
-                <input type="checkbox" class="empty_fav checked_fav">
-                <label for="check">
-                    <i class="far fa-heart icone_fav"></i>
-                    <i class="fas fa-heart icone_fav_checked"></i>
-                </label>
-            </div>
+            <h2>Le délice des sens <i class="far fa-heart icone_fav"></i><i class="fa-solid fa-heart icone_fav-solid"></i></h2>
         </section>
 
         <section class="menu">
             <h2>ENTRÉES</h2>
+            <div id="border"></div>
 
             <div class="menu_container">
-                <input type="checkbox" name="ordered" id="checked1">
                 <div class="menu_container_meal">
-                    <label for="checked1" class="menu_container_meal_title">Tartare de thon</label>
-                    <label for="checked1" class="menu_container_meal_info">Assaisonné au yuzu</label>
+                    <h3>Tarte de thon</h3>
+                    <p>Assaisonné au yuzu <span>25€</span></p>
+                    <i class="fas fa-check-circle"></i>
                 </div>
-                <label for="checked1" class="menu_container_price">25€</label>
-                <label for="checked1" class="menu_container_ordered"><i class="fas fa-check-circle"></i></label>
-            </div>
 
-            <div class="menu_container">
-                <input type="checkbox" name="ordered" id="checked2">
                 <div class="menu_container_meal">
-                    <label for="checked2" class="menu_container_meal_title">Bouchée de homard croustillant</label>
-                    <label for="checked2" class="menu_container_meal_info">Et sa farandole de petits légumes</label>
+                    <h3>Bouchée de homard croustillant</h3>
+                    <p>Et sa farandole de petits légumes <span>35€</span></p>
+                    <i class="fas fa-check-circle"></i>
                 </div>
-                <label for="checked2" class="menu_container_price">35€</label>
-                <label for="checked2" class="menu_container_ordered"><i class="fas fa-check-circle"></i></label>
-            </div>
 
-            <div class="menu_container">
-                <input type="checkbox" name="ordered" id="checked3">
                 <div class="menu_container_meal">
-                    <label for="checked3" class="menu_container_meal_title">Velouté de cèpes</label>
-                    <label for="checked3" class="menu_container_meal_info">Aux truffes</label>
+                    <h3>Velouté de cèpes</h3>
+                    <p>Aux truffes <span>20€</span></p>
+                    <i class="fas fa-check-circle"></i>
                 </div>
-                <label for="checked3" class="menu_container_price">20€</label>
-                <label for="checked3" class="menu_container_ordered"><i class="fas fa-check-circle"></i></label>
             </div>
         </section>
 
         <section class="menu">
             <h2>PLATS</h2>
+            <div id="border"></div>
 
             <div class="menu_container">
-                <input type="checkbox" name="ordered" id="checked4">
                 <div class="menu_container_meal">
-                    <label for="checked4" class="menu_container_meal_title">Poulet rôti aux herbes de Provence</label>
-                    <label for="checked4" class="menu_container_meal_info">Et sa crème de truffe</label>
+                    <h3>Poulet rôti aux herbes de Provence</h3>
+                    <p>Et sa crème de truffe <span>40€</span><i class="fas fa-check-circle"></i></p>
                 </div>
-                <label for="checked4" class="menu_container_price">40€</label>
-                <label for="checked4" class="menu_container_ordered"><i class="fas fa-check-circle"></i></label>
-            </div>
 
-            <div class="menu_container">
-                <input type="checkbox" name="ordered" id="checked5">
                 <div class="menu_container_meal">
-                    <label for="checked5" class="menu_container_meal_title">Langouste rôtie</label>
-                    <label for="checked5" class="menu_container_meal_info">Et ses légumes de saison</label>
+                    <h3>Langouste rôtie</h3>
+                    <p>Et ses légumes de saison <span>35€</span><i class="fas fa-check-circle"></i></p>
                 </div>
-                <label for="checked5" class="menu_container_price">35€</label>
-                <label for="checked5" class="menu_container_ordered"><i class="fas fa-check-circle"></i></label>
-            </div>
 
-            <div class="menu_container">
-                <input type="checkbox" name="ordered" id="checked6">
                 <div class="menu_container_meal">
-                    <label for="checked6" class="menu_container_meal_title">Côte de boeuf Angus</label>
-                    <label for="checked6" class="menu_container_meal_info">Et sa purée de panais</label>
+                    <h3>Côte de boeuf Angus</h3>
+                    <p>Et sa purée de panais <span>44€</span><i class="fas fa-check-circle"></i></p>
                 </div>
-                <label for="checked6" class="menu_container_price">44€</label>
-                <label for="checked6" class="menu_container_ordered"><i class="fas fa-check-circle"></i></label>
             </div>
         </section>
 
         <section class="menu">
             <h2>DESSERTS</h2>
-
+            <div id="border"></div>
             <div class="menu_container">
-                <input type="checkbox" name="ordered" id="checked7">
                 <div class="menu_container_meal">
-                    <label for="checked7" class="menu_container_meal_title">Farandole de desserts</label>
-                    <label for="checked7" class="menu_container_meal_info">Du chef</label>
+                    <h3>Farandole de desserts</h3>
+                    <p>Du chef <span>18€</span><i class="fas fa-check-circle"></i></p>
                 </div>
-                <label for="checked7" class="menu_container_price">18€</label>
-                <label for="checked7" class="menu_container_ordered"><i class="fas fa-check-circle"></i></label>
-            </div>
 
-            <div class="menu_container">
-                <input type="checkbox" name="ordered" id="checked8">
                 <div class="menu_container_meal">
-                    <label for="checked8" class="menu_container_meal_title">Crème brulée</label>
-                    <label for="checked8" class="menu_container_meal_info">Revisitée</label>
+                    <h3>Crème brûlée</h3>
+                    <p>Revisitée <span>22€</span><i class="fas fa-check-circle"></i></p>
                 </div>
-                <label for="checked8" class="menu_container_price">22€</label>
-                <label for="checked8" class="menu_container_ordered"><i class="fas fa-check-circle"></i></label>
-            </div>
 
-            <div class="menu_container">
-                <input type="checkbox" name="ordered" id="checked9">
                 <div class="menu_container_meal">
-                    <label for="checked9" class="menu_container_meal_title">Tiramisu</label>
-                    <label for="checked9" class="menu_container_meal_info">À la noisette</label>
+                    <h3>Tiramisu</h3>
+                    <p>À la noisette <span>23€</span><i class="fas fa-check-circle"></i></p>
                 </div>
-                <label for="checked9" class="menu_container_price">23€</label>
-                <label for="checked9" class="menu_container_ordered"><i class="fas fa-check-circle"></i></label>
             </div>
         </section>
 
