--- a/note_enchantee.html
+++ b/note_enchantee.html
@@ -20,126 +20,80 @@
     <main>
         <section class="illustration">
             <img src="images/restaurants/note_enchantee.jpg" alt="La Note Enchantée" />
-            <h2>La note enchantée</h2>
-            <div class="menu_fav">
-                <input type="checkbox" class="empty_fav checked_fav">
-                <label for="check">
-                    <i class="far fa-heart icone_fav"></i>
-                    <i class="fas fa-heart icone_fav_checked"></i>
-                </label>
-            </div>
+            <h2>La note enchantée <i class="far fa-heart icone_fav"></i><i class="fa-solid fa-heart icone_fav-solid"></i></h2>
         </section>
 
         <section class="menu">
             <h2>ENTRÉES</h2>
+            <div id="border"></div>
 
             <div class="menu_container">
-                <input type="checkbox" name="ordered" id="checked1">
                 <div class="menu_container_meal">
-                    <label for="checked1" class="menu_container_meal_title">Ravioles de foie gras</label>
-                    <label for="checked1" class="menu_container_meal_info">Acompagnés de leur crème à la truffe</label>
+                    <h3>Ravioles de foie gras</h3>
+                    <p>Accompagnés de leur crème à la truffe <span>25€</span></p>
+                    <i class="fas fa-check-circle"></i>
                 </div>
-                <label for="checked1" class="menu_container_price">25€</label>
-                <label for="checked1" class="menu_container_ordered"><i class="fas fa-check-circle"></i></label>
-            </div>
 
-            <div class="menu_container">
-                <input type="checkbox" name="ordered" id="checked2">
                 <div class="menu_container_meal">
-                    <label for="checked2" class="menu_container_meal_title">Caviar osciètre</label>
-                    <label for="checked2" class="menu_container_meal_info">Sur blini à a farine de blé noir</label>
+                    <h3>Caviar osciètre</h3>
+                    <p>Sur blini à la farine de blé noir<span>35€</span></p>
+                    <i class="fas fa-check-circle"></i>
                 </div>
-                <label for="checked2" class="menu_container_price">35€</label>
-                <label for="checked2" class="menu_container_ordered"><i class="fas fa-check-circle"></i></label>
-            </div>
 
-            <div class="menu_container">
-                <input type="checkbox" name="ordered" id="checked3">
                 <div class="menu_container_meal">
-                    <label for="checked3" class="menu_container_meal_title">Homard et espuma de potiron</label>
-                    <label for="checked3" class="menu_container_meal_info">Mariné aux zestes d'orange</label>
+                    <h3>Homard et espuma de potiron</h3>
+                    <p>Mariné aux zestes d'orange <span>20€</span></p>
+                    <i class="fas fa-check-circle"></i>
                 </div>
-                <label for="checked3" class="menu_container_price">20€</label>
-                <label for="checked3" class="menu_container_ordered"><i class="fas fa-check-circle"></i></label>
-            </div>
 
-            <div class="menu_container">
-                <input type="checkbox" name="ordered" id="checked4">
                 <div class="menu_container_meal">
-                    <label for="checked4" class="menu_container_meal_title">Foie gras de canard cuit entier</label>
-                    <label for="checked4" class="menu_container_meal_info">Confiture de figue et pain toasté</label>
+                    <h3>Foie gras de canard cuit entier</h3>
+                    <p>Confiture de figue et pain toasté <span>35€</span></p>
+                    <i class="fas fa-check-circle"></i>
                 </div>
-                <label for="checked4" class="menu_container_price">35€</label>
-                <label for="checked4" class="menu_container_ordered"><i class="fas fa-check-circle"></i></label>
             </div>
-
         </section>
 
         <section class="menu">
             <h2>PLATS</h2>
+            <div id="border"></div>
 
             <div class="menu_container">
-                <input type="checkbox" name="ordered" id="checked5">
                 <div class="menu_container_meal">
-                    <label for="checked5" class="menu_container_meal_title">Noix de coquilles Saint-Jacques</label>
-                    <label for="checked5" class="menu_container_meal_info">Sur lit de purée de céleri-rave</label>
+                    <h3>Noix de coquilles Saint-Jacques</h3>
+                    <p>Sur lit de purée de céleri-rave <span>40€</span><i class="fas fa-check-circle"></i></p>
                 </div>
-                <label for="checked5" class="menu_container_price">40€</label>
-                <label for="checked5" class="menu_container_ordered"><i class="fas fa-check-circle"></i></label>
-            </div>
 
-            <div class="menu_container">
-                <input type="checkbox" name="ordered" id="checked6">
                 <div class="menu_container_meal">
-                    <label for="checked6" class="menu_container_meal_title">Langoustine poêlée</label>
-                    <label for="checked6" class="menu_container_meal_info">APurée de patate douce</label>
+                    <h3>Lagoustine poêlée</h3>
+                    <p>Purée de patate douce <span>35€</span><i class="fas fa-check-circle"></i></p>
                 </div>
-                <label for="checked6" class="menu_container_price">35€</label>
-                <label for="checked6" class="menu_container_ordered"><i class="fas fa-check-circle"></i></label>
-            </div>
 
-            <div class="menu_container">
-                <input type="checkbox" name="ordered" id="checked7">
                 <div class="menu_container_meal">
-                    <label for="checked7" class="menu_container_meal_title">Mijoté de queue de boeuf</label>
-                    <label for="checked7" class="menu_container_meal_info">Et riz sauvage aux zestes de citron</label>
+                    <h3>Miojté de queue de boeuf</h3>
+                    <p>Et riz sauvage aux zestes de citron <span>44€</span><i class="fas fa-check-circle"></i></p>
                 </div>
-                <label for="checked7" class="menu_container_price">44€</label>
-                <label for="checked7" class="menu_container_ordered"><i class="fas fa-check-circle"></i></label>
             </div>
         </section>
 
         <section class="menu">
             <h2>DESSERTS</h2>
-
+            <div id="border"></div>
             <div class="menu_container">
-                <input type="checkbox" name="ordered" id="checked8">
                 <div class="menu_container_meal">
-                    <label for="checked8" class="menu_container_meal_title">Macaron noisette et chocolat</label>
-                    <label for="checked8" class="menu_container_meal_info">Glace au caramel brun et sel de Guérande</label>
+                    <h3>Macaron noisette et chocolat</h3>
+                    <p>Glace au caramel brun et sel de Guérande <span>18€</span><i class="fas fa-check-circle"></i></p>
                 </div>
-                <label for="checked8" class="menu_container_price">18€</label>
-                <label for="checked8" class="menu_container_ordered"><i class="fas fa-check-circle"></i></label>
-            </div>
 
-            <div class="menu_container">
-                <input type="checkbox" name="ordered" id="checked9">
                 <div class="menu_container_meal">
-                    <label for="checked9" class="menu_container_meal_title">Baba au rhum revisité</label>
-                    <label for="checked9" class="menu_container_meal_info">Avec son coulis de citron</label>
+                    <h3>Baba au rhum revisité</h3>
+                    <p>Avec son coulis de citron <span>22€</span><i class="fas fa-check-circle"></i></p>
                 </div>
-                <label for="checked9" class="menu_container_price">22€</label>
-                <label for="checked9" class="menu_container_ordered"><i class="fas fa-check-circle"></i></label>
-            </div>
 
-            <div class="menu_container">
-                <input type="checkbox" name="ordered" id="checked10">
                 <div class="menu_container_meal">
-                    <label for="checked10" class="menu_container_meal_title">Tarte au citron meringuée</label>
-                    <label for="checked10" class="menu_container_meal_info">Déstructurée</label>
+                    <h3>Tarte au citron meringué</h3>
+                    <p>Destructurée <span>23€</span><i class="fas fa-check-circle"></i></p>
                 </div>
-                <label for="checked10" class="menu_container_price">23€</label>
-                <label for="checked10" class="menu_container_ordered"><i class="fas fa-check-circle"></i></label>
             </div>
         </section>
 
