--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
     <title>OhMyFood - Réservation de Restaurants d'Exception</title>
 </head>
 <body>
-    <!-- <section class="loader"> 
+    <section class="loader"> 
     <span class="loader_anim"></span>
     <i class="fas fa-utensils"></i>
-    </section> -->
+    </section> 
 
     <header id="header">
         <div class="header_logo">
