Responsive Menus + Animations
Ajout du responsive des menus et de l'animation CSS des boutons du site et des plats de chaque menu

--- a/delice_sens.html
+++ b/delice_sens.html
@@ -20,35 +20,35 @@
     <main>
         <section class="illustration">
             <img src="images/restaurants/delice_sens.jpg" alt="Le Délice des Sens" />
-            <h2>Le délice des sens <i class="far fa-heart icone_fav"></i><i class="fa-solid fa-heart icone_fav-solid"></i></h2>
+            <div class="border_menu">
+                <h2>Le délice des sens <i class="far fa-heart icone_fav"></i><i class="fa-solid fa-heart icone_fav-solid"></i></h2>
+            </div>
         </section>
 
-        <section class="menu">
+    <section class="menu_responsive">
+        <div class="menu">
             <h2>ENTRÉES</h2>
             <div id="border"></div>
 
             <div class="menu_container">
                 <div class="menu_container_meal">
                     <h3>Tarte de thon</h3>
-                    <p>Assaisonné au yuzu <span>25€</span></p>
-                    <i class="fas fa-check-circle"></i>
+                    <p>Assaisonné au yuzu <span>25€</span><i class="fas fa-check-circle"></i></p>
                 </div>
 
                 <div class="menu_container_meal">
                     <h3>Bouchée de homard croustillant</h3>
-                    <p>Et sa farandole de petits légumes <span>35€</span></p>
-                    <i class="fas fa-check-circle"></i>
+                    <p>Et sa farandole de petits légumes <span>35€</span><i class="fas fa-check-circle"></i></p>
                 </div>
 
                 <div class="menu_container_meal">
                     <h3>Velouté de cèpes</h3>
-                    <p>Aux truffes <span>20€</span></p>
-                    <i class="fas fa-check-circle"></i>
+                    <p>Aux truffes <span>20€</span><i class="fas fa-check-circle"></i></p>
                 </div>
             </div>
-        </section>
+        </div>
 
-        <section class="menu">
+        <div class="menu">
             <h2>PLATS</h2>
             <div id="border"></div>
 
@@ -68,9 +68,9 @@
                     <p>Et sa purée de panais <span>44€</span><i class="fas fa-check-circle"></i></p>
                 </div>
             </div>
-        </section>
+        </div>
 
-        <section class="menu">
+        <div class="menu">
             <h2>DESSERTS</h2>
             <div id="border"></div>
             <div class="menu_container">
@@ -86,10 +86,11 @@
 
                 <div class="menu_container_meal">
                     <h3>Tiramisu</h3>
-                    <p>À la noisette <span>23€</span><i class="fas fa-check-circle"></i></p>
+                    <p>À la noisette <span>23€ </span><i class="fas fa-check-circle"></i></p>
                 </div>
             </div>
-        </section>
+        </div>
+    </section>
 
         <div class="order">
             <button class="order_button" type="submit">Commander</button>
