--- a/francaise.html
+++ b/francaise.html
@@ -20,7 +20,9 @@
     <main>
         <section class="illustration">
             <img src="images/restaurants/francaise.jpg" alt="À la française" />
-            <h2>À la française <i class="far fa-heart icone_fav"></i><i class="fa-solid fa-heart icone_fav-solid"></i></h2>
+            <div class="border_menu">
+                <h2>À la française <i class="far fa-heart icone_fav"></i><i class="fa-solid fa-heart icone_fav-solid"></i></h2>
+            </div>
         </section>
 
         <section class="menu">
