--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                         <span class="card_info">Nouveau</span>
                         <div class="card_footer">
                             <h3>La palette du goût</h3>
-                            <p>Ménilmontant <i class="far fa-heart icone_fav"></i><i class="fa-solid fa-heart icone_fav-solid"></i></p>
+                            <p>Ménilmontant <i class="far fa-heart icone_fav"></i><i class="fas fa-heart icone_fav_solid"></i></p>
                         </div>
                     </div>
                 </a>
@@ -78,7 +78,7 @@
                         <span class="card_info">Nouveau</span>
                         <div class="card_footer">
                             <h3>La note enchantée</h3>
-                            <p>Charonne <i class="far fa-heart icone_fav"></i><i class="fa-solid fa-heart icone_fav-solid"></i></p>
+                            <p>Charonne <i class="far fa-heart icone_fav"></i><i class="fas fa-heart icone_fav_solid"></i></p>
                         </div>
                     </div>
                 </a>
@@ -90,7 +90,7 @@
                         <img src="images/restaurants/francaise.jpg" alt="A la française" />
                         <div class="card_footer">
                             <h3>À la française</h3>
-                            <p>Cité Rouge <i class="far fa-heart icone_fav"></i><i class="fa-solid fa-heart icone_fav-solid"></i></p>
+                            <p>Cité Rouge <i class="far fa-heart icone_fav"></i><i class="fas fa-heart icone_fav_solid"></i></p>
                         </div>
                     </div>
                 </a>
@@ -102,7 +102,7 @@
                         <img src="images/restaurants/delice_sens.jpg" alt="Le Délice des Sens" />
                         <div class="card_footer">
                             <h3>Le délice des sens</h3>
-                            <p>Folie-Méricourt<i class="far fa-heart icone_fav"></i><i class="fa-solid fa-heart icone_fav-solid"></i></p>
+                            <p>Folie-Méricourt<i class="far fa-heart icone_fav"></i><i class="fas fa-heart icone_fav_solid"></i></p>
                         </div>
                     </div>
                 </a>
