--- a/palette_gout.html
+++ b/palette_gout.html
@@ -20,7 +20,9 @@
     <main>
         <section class="illustration">
             <img src="images/restaurants/palette_gout.jpg" alt="La Palette du Goût" />
-            <h2>La palette du goût <i class="far fa-heart icone_fav"></i><i class="fa-solid fa-heart icone_fav-solid"></i></h2>
+            <div class="border_menu">
+                <h2>La palette du goût <i class="far fa-heart icone_fav"></i><i class="fa-solid fa-heart icone_fav-solid"></i></h2>
+            </div>
         </section>
 
         <section class="menu">
