--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
     <section id="restaurants">
             <h2>Restaurants</h2>
 
+            <section class="restaurants_responsive">
             <article class="restaurant_card">
                 <a href="palette_gout.html">
                     <div class="restaurant_img">
@@ -107,6 +108,7 @@
                     </div>
                 </a>
             </article>
+            </section>
     </section>
 
     <footer class="footer">
