--- a/index.html
+++ b/index.html
@@ -65,9 +65,13 @@
                         <img src="images/restaurants/palette_gout.jpg" alt="La Palette du Goût" />
                         <span class="card_info">Nouveau</span>
                         <div class="card_footer">
-                            <h3>La palette du goût</h3>
-                            <p>Ménilmontant <i class="far fa-heart icone_fav"></i><i class="fas fa-heart icone_fav_solid"></i></p>
-                        </div>
+                            <div class="card_footer_text">
+                                <h3>La palette du goût</h3>
+                                <p>Ménilmontant</p> 
+                            </div>
+                            <div class="card_footer_icone">
+                                <i class="far fa-heart icone_fav"><i class="fas fa-heart icone_fav_solid"></i></i>
+                            </div>
                     </div>
                 </a>
             </article>
@@ -78,8 +82,13 @@
                         <img src="images/restaurants/note_enchantee.jpg" alt="La Note Enchantée" />
                         <span class="card_info">Nouveau</span>
                         <div class="card_footer">
-                            <h3>La note enchantée</h3>
-                            <p>Charonne <i class="far fa-heart icone_fav"></i><i class="fas fa-heart icone_fav_solid"></i></p>
+                            <div class="card_footer_text">
+                                <h3>La note enchantée</h3>
+                                <p>Charonne</p>
+                            </div>
+                            <div class="card_footer_icone">
+                                <i class="far fa-heart icone_fav"><i class="fas fa-heart icone_fav_solid"></i></i>
+                            </div>
                         </div>
                     </div>
                 </a>
@@ -90,8 +99,13 @@
                     <div class="restaurant_img">
                         <img src="images/restaurants/francaise.jpg" alt="A la française" />
                         <div class="card_footer">
-                            <h3>À la française</h3>
-                            <p>Cité Rouge <i class="far fa-heart icone_fav"></i><i class="fas fa-heart icone_fav_solid"></i></p>
+                            <div class="card_footer_text">
+                                <h3>À la française</h3>
+                                <p>Cité Rouge</p>
+                            </div>
+                            <div class="card_footer_icone">
+                                <i class="far fa-heart icone_fav"><i class="fas fa-heart icone_fav_solid"></i></i>
+                            </div>
                         </div>
                     </div>
                 </a>
@@ -102,8 +116,13 @@
                     <div class="restaurant_img">
                         <img src="images/restaurants/delice_sens.jpg" alt="Le Délice des Sens" />
                         <div class="card_footer">
-                            <h3>Le délice des sens</h3>
-                            <p>Folie-Méricourt<i class="far fa-heart icone_fav"></i><i class="fas fa-heart icone_fav_solid"></i></p>
+                            <div class="card_footer_text">
+                                <h3>Le délice des sens</h3>
+                                <p>Folie-Méricourt</p>
+                            </div>
+                            <div class="card_footer_icone">
+                                <i class="far fa-heart icone_fav"><i class="fas fa-heart icone_fav_solid"></i></i>
+                            </div>
                         </div>
                     </div>
                 </a>
